fix Presenter
toList -> collect